# random-anime-picker

./: Cargo.toml  README.md
src/: main.rs
