[package]
name = "random-anime-picker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
reqwest = "0.11.18"
rustyline = "12.0.0"
serde = {version = "1.0.183", features = ["derive"]}
serde_json = "1.0.104"
tokio = {version =  "1.30.0", features = ["full"] }
